# ballwork-web

./: .env.example  .gitignore  README.md  ballwork-web.code-workspace  docker-compose.override.yml  docker-compose.staging.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
client-ballwork/: README.md  package-lock.json  package.json
client-ballwork/src/: App.vue
client-ballwork/src/components/: SearchBar.vue  SearchSuggestions.vue
client-ballwork/src/router/: index.ts
client-ballwork/src/services/: apiClient.ts  searchService.ts  statsService.ts
client-ballwork/src/views/: Home.vue
docs/: architecture-rules.md
k6/: run-scenario1.ps1
k6/scenarios/: scenario1-search-and-fetch.js
mock-api-service/: mock_api.dockerfile
mock-api-service/app/: main.py
server/: .dockerignore  FILE_TREE.md  README.md  alembic.ini  ballwork.dockerfile
server/alembic/: env.py
server/alembic/versions/: 286931df51b6_date_fixes.py  2a58e207ccac_initial_schema.py  3bbdd9f02edd_digest_database_models.py  4699278b34ff_initial_schema.py  544c2e561377_another_inital_schema.py  67515cf4e6c4_digest_database_models_2.py  6a3e15d8acb1_n01_dbmodels.py  84cb4bc36c10_n01_dbmodels.py  a1b2c3d4e5f6_fix_subscription_createdat_default.py  c970525c496e_add_subscription_scheduler_fields.py  cd0ddfdf8a61_stats_cache.py  e832ebd379df_adjusting_payload.py
server/app/: db.py  logging.py  main.py  requirements.txt
server/app/core/: settings.py
server/app/scheduler/: jobs.py  scheduler.py
server/tests/digest/: TEST_GUIDE.md  conftest.py  mock_repo.py  test_digest_service.py  (+5 more)
(+82 files in other folders)
