[project]
name = "ballwork-web"
version = "0.1.0"
description = "Modulithic backend for architecture evaluation"
requires-python = ">=3.11"

# Formatting configuration
[tool.black]
line-length = 88
target-version = ['py311']

# Linting configuration
[tool.ruff]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
line-length = 88
fix = true

# Import discipline
[tool.ruff.per-file-ignores]
"app/modules/*/api.py" = ["I"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["server"]